--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&display=swap');
+
 *,
 *::after,
 *::before {
@@ -6,11 +8,35 @@
   box-sizing: border-box;
 }
 
+/* Theme color */
+$hue: 218;
+$sat: 45;
+$lum: 37;
+
 $color-bg: #121212;
 $color-white: #fff;
-$color-accent: #4369b2;
+$color-accent: hsl($hue, $sat, $lum);
+$font-control: 'Lato', sans-serif;
+$font-body: 'Gill Sans', 'Mukta Vaani', sans-serif;
+
+@function accent($b) {
+  @return adjust-color($color-accent, $blackness: $b * 10% - 50%)
+}
 
 body {
-  background-color: $color-bg;
+  background-color: accent(10);
   color: $color-white;
+  font-family: $font-body;
+}
+
+ul {
+  list-style: none;
+}
+
+a,
+a:hover,
+a:focus,
+a:visited {
+  color: inherit;
+  text-decoration: none;
 }
