--- a/src/styles/partials/_app.scss
+++ b/src/styles/partials/_app.scss
@@ -8,25 +8,11 @@
   box-sizing: border-box;
 }
 
-/* Theme color */
-$hue: 218;
-$sat: 45;
-$lum: 37;
-
-$color-bg: #121212;
-$color-white: #fff;
-$color-accent: hsl($hue, $sat, $lum);
-$font-control: 'Lato', sans-serif;
-$font-body: 'Gill Sans', 'Mukta Vaani', sans-serif;
-
-@function accent($b) {
-  @return adjust-color($color-accent, $blackness: $b * 10% - 50%)
-}
-
 body {
-  background-color: accent(10);
+  background-color: accent($color-accent, 5);
   color: $color-white;
   font-family: $font-body;
+  font-size: 1rem;
 }
 
 ul {
@@ -39,4 +25,13 @@ a:focus,
 a:visited {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  appearance: none;
+  border: none;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: inherit;
 }
