--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -1,8 +1,7 @@
 .regions {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 2em;
-  background-color: accent($color-accent, 6);
 }
 
 .regionMenu {
@@ -24,20 +23,12 @@
 
 .region {
   background-color: accent($color-accent, 5);
-  flex-basis: 100%;
   padding: 2em;
-
-  & > a {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 1em;
-
-    &:hover {
-      opacity: 0.5;
-    }
-  }
-
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1em;
+  
   &:nth-child(4n - 3),
   &:nth-child(4n - 2) {
     background-color: accent($color-accent, 4);
@@ -48,14 +39,16 @@
   }
 }
 
-.region > a > div {
-  flex-basis: 50%;
+.region > div {
+  flex-basis: 100%;
 }
 
 .regionInfo {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  gap: 0.5em;
 }
 
 .regionTitle {
@@ -67,6 +60,9 @@
 .map {
   min-height: 30vh;
   width: 100%;
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 #menu {
@@ -82,15 +78,12 @@
 }
 
 @media screen and (min-width: 50em) {
-  .region {
-    flex-basis: 48%;
-
-    &:first-child {
-      flex-basis: 100%;
-
-      & > a {
-        flex-direction: row;
-      }
-    }
+  .regions {
+    grid-template-columns: 1fr 1fr;
+  }
+  .region:first-child {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    flex-direction: row;
   }
 }
