--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -40,7 +40,7 @@
 }
 
 .region > div {
-  flex-basis: 100%;
+  width: 100%;
 }
 
 .regionInfo {
@@ -59,7 +59,6 @@
 
 .map {
   min-height: 30vh;
-  width: 100%;
   &:hover {
     opacity: 0.5;
   }
@@ -85,5 +84,8 @@
     grid-column: 1 / 3;
     grid-row: 1;
     flex-direction: row;
+    & > div {
+      width: 50%;
+    }
   }
 }
